<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/ic_background"
    tools:context=".view.BuyInsurance">

    <EditText
        android:id="@+id/userFirstName_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/rancho"
        android:gravity="center"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorButton"
        android:textCursorDrawable="@color/colorButton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <EditText
        android:id="@+id/userLastName_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/rancho"
        android:gravity="center"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/userDateOfPurchase_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userFirstName_et"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/userDateOfPurchase_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/rancho"
        android:gravity="center"
        android:hint="@string/date"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/userRemarks_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLastName_et" />

    <EditText
        android:id="@+id/userRemarks_et"
        android:layout_width="302dp"
        android:layout_height="115dp"
        android:ems="10"
        android:fontFamily="@font/rancho"
        android:gravity="center"
        android:hint="@string/remarks"
        android:inputType="textImeMultiLine"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Switch
        android:id="@+id/switch_carInsurance"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:fontFamily="@font/rancho"
        android:text="@string/car"
        android:textColorHighlight="@color/colorButton"
        android:textColorLink="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRemarks_et"
        app:layout_constraintVertical_bias="0.084" />

    <Switch
        android:id="@+id/switch_LifeInsurance"
        android:layout_width="93dp"
        android:layout_height="26dp"
        android:fontFamily="@font/rancho"
        android:text="@string/life"
        android:textColorHighlight="@color/colorButton"
        android:textColorLink="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRemarks_et"
        app:layout_constraintVertical_bias="0.286" />

    <Switch
        android:id="@+id/switch_disabilityInsurance"
        android:layout_width="114dp"
        android:layout_height="29dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rancho"
        android:text="@string/disability"
        android:textColorHighlight="@color/colorButton"
        android:textColorLink="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@+id/switch_apartamentInssurance"
        app:layout_constraintEnd_toStartOf="@+id/switch_carInsurance"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRemarks_et"
        app:layout_constraintVertical_bias="0.366" />

    <Switch
        android:id="@+id/switch_apartamentInssurance"
        android:layout_width="114dp"
        android:layout_height="27dp"
        android:fontFamily="@font/rancho"
        android:text="@string/apartment"
        android:textColorHighlight="@color/colorButton"
        android:textColorLink="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switch_LifeInsurance"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRemarks_et"
        app:layout_constraintVertical_bias="0.288" />

    <Button
        android:id="@+id/addInsurance_btn"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@color/colorButton"
        android:fontFamily="@font/rancho"
        android:text="@string/buyInsurance"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userRemarks_et"
        app:layout_constraintVertical_bias="0.528" />

    <TextView
        android:id="@+id/designedCreated_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rancho"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

</androidx.constraintlayout.widget.ConstraintLayout>